; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-sunrpc.c_progstr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-sunrpc.c_progstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@progstr.buf = internal global [32 x i8] zeroinitializer, align 16
@progstr.lastprog = internal global i64 0, align 8
@.str = private unnamed_addr constant [4 x i8] c"#%u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @progstr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @progstr(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* @progstr.lastprog, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @progstr.lastprog, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %6
  store i8* getelementptr inbounds ([32 x i8], [32 x i8]* @progstr.buf, i64 0, i64 0), i8** %2, align 8
  br label %14

11:                                               ; preds = %6, %1
  %12 = load i64, i64* %3, align 8
  %13 = call i32 @snprintf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @progstr.buf, i64 0, i64 0), i32 32, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i64 %12)
  store i8* getelementptr inbounds ([32 x i8], [32 x i8]* @progstr.buf, i64 0, i64 0), i8** %2, align 8
  br label %14

14:                                               ; preds = %11, %10
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
